crates/nirvash-macros/tests/fixtures/attribute_wrong_type.stderr
error[E0308]: mismatched types
  --> tests/fixtures/attribute_wrong_type.rs:43:4
   |
43 | fn wrong_state_type() -> BoolExpr<OtherState> {
   |    ^^^^^^^^^^^^^^^^ expected fn pointer, found fn item
   |
   = note: expected fn pointer `fn() -> BoolExpr<State>`
                 found fn item `fn() -> BoolExpr<OtherState> {wrong_state_type}`
